--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R:
            email = "fleuryliwa@gmail.com",
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
-Imports: ggplot2, dplyr, reshape, directlabels, ggpubr, DT
+Imports: ggplot2, dplyr, reshape, directlabels, ggpubr, DT, ggrepel, grDevices
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
