--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(Abrv4)
 export(Stat_Pilote)
 export(compare2)
 export(tab_agr)
+import(RColorBrewer)
 import(directlabels)
 import(ggplot2)
 import(ggpubr)
